Started the service page revisions
Made the old services page a detailed view page instead - will split it into two later. The new services page is still really rough right now.

--- a/services.html
+++ b/services.html
@@ -41,19 +41,38 @@
         </div>
         <div class="header-text">
           <h1>Services</h1>
-          <p>Home service. No hassle.</p>
+          <p> What we offer. </p>
         </div>
       </div>
     </div>
   </section>
 
   <section>
-    <h2> Exterior Detail - $150 </h2>
+    <!-- <h2> Exterior Detail - $150 </h2>
 
-    <p> Each Exterior Detail includes the following: </p>
+    <p> Each Exterior Detail includes the following: </p> -->
 
     <div class="container-services">
-      <div class="block-img">
+      <div class="block-services">
+        <img class="services-img" src="images/ext2.jpg" alt="wax & polish">
+      </div>
+
+      <div class="block-services">
+        <img class="services-img" src="images/int7.jpg" alt="wax & polish">
+      </div>
+
+      <div class="block-services">
+        <img class="services-img" src="images/ext2.jpg" alt="wax & polish">
+      </div>
+
+      <div class="block-services">
+        <img class="services-img" src="images/ext2.jpg" alt="wax & polish">
+      </div>
+
+
+
+
+      <!-- <div class="block-img">
         <a href="wax.html">
           <img class="image-link" src="images/ext4.jpg" alt="wax & polish">
           <h3>Wax & Polish</h3>
@@ -61,74 +80,15 @@
             <div class="text-overlay">Find out more</div>
           </div>
         </a>
-      </div>
+      </div> -->
 
-      <div class="block-img">
-        <a href="wax.html">
-          <img class="image-link" src="images/tire2.jpg" alt="wheel & tire">
-          <h3>Wheel & tire restoration</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
 
-      <div class="block-img">
-        <a href="wax.html">
-          <img class="image-link" src="images/engine2.jpg" alt="engine cleanse">
-          <h3>Engine cleanse</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
+
     </div>
-
-    <div class="container-payment">
-      <a class="button-nav" href="checkout.html">Add to Cart</a>
-    </div>
-  </section>
-
-  <section>
-    <h2> Interior Detail - $100 </h2>
-    <p> Each Interior Detail includes the following: </p>
 
     <div class="container-services">
-      <div class="block-img">
-        <a href="vacuum.html">
-          <img class="image-link" src="images/int4.png" alt="trim cleanse">
-          <h3>Trim cleanse</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="block-img">
-        <a href="vacuum.html">
-          <img class="image-link" src="images/int3.jpeg" alt="wipe down">
-          <h3>Wipe down</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="block-img">
-        <a href="vacuum.html">
-          <img class="image-link" src="images/interior.jpg" alt="vaccuum & shampoo">
-          <h3>Vaccuum & shampoo</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-    </div>
-
-    <div class="container-payment">
       <a class="button-nav" href="checkout.html">Add to Cart</a>
     </div>
-    
-  </section>
 
+  </section>
 </body>
