Added "navbar-button" changes to other pages + spacing
All the pages have the changes now, also added space between each button in "queries" when on mobile

--- a/checkout.html
+++ b/checkout.html
@@ -21,6 +21,7 @@
             <span> DETAILING </span>
           </span>
         </div>
+	<div class="navbar-buttons">
         <ul>
           <li><a class="button-nav" href="home.html">Home</a> </li>
           <li><a class="button-nav" href="services.html">Services</a> </li>
@@ -28,6 +29,7 @@
           <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
           <li><a class="button-nav" href="index.html">Style Guide</a> </li>
         </ul>
+	</div>
       </div>
       <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
