--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <span class="detailing-font-top"> DETAILING </span>
           </span>
         </div>
+        <div class="navbar-buttons">
         <ul>
           <li> <a class="button-nav" href="#branding_ideas">Basic Branding Ideas</a> </li>
           <li> <a class="button-nav" href="#interactive_elements">Interactive Elements</a> </li>
@@ -33,6 +34,7 @@
           <li> <a class="button-nav" href="services.html">Services Template</a> </li>
           <li> <a class="button-nav" href="checkout.html">Checkout Template</a> </li>
         </ul>
+        </div>
       </div>
     </nav>
 
