--- a/detailed-services.html
+++ b/detailed-services.html
@@ -22,6 +22,7 @@
           <span class="detailing-font-top"> DETAILING </span>
         </span>
       </div>
+      <div class="navbar-buttons">
       <ul>
         <li><a class="button-nav" href="home.html">Home</a> </li>
         <li><a class="button-nav" href="services.html">Services</a> </li>
@@ -29,6 +30,7 @@
         <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
         <li><a class="button-nav" href="index.html">Style Guide</a> </li>
       </ul>
+      </div>
     </div>
   </nav>
 
