Made changes to services & detailed views
Went back to the original services page & added a large "add to cart" button to each service. For the detailed views I made the layout similar to the home page. Still needs cleaning up

--- a/services.html
+++ b/services.html
@@ -43,54 +43,104 @@
         </div>
         <div class="header-text">
           <h1>Services</h1>
-          <p> What we offer. </p>
+          <p>Home service. No hassle.</p>
         </div>
       </div>
     </div>
   </section>
 
   <section>
-    <!-- <h2> Exterior Detail - $150 </h2>
+    <h2> Exterior Detail Services </h2>
 
-    <p> Each Exterior Detail includes the following: </p> -->
-
-    <div class="container-services">
-      <div class="block-services">
-        <img class="services-img" src="images/ext2.jpg" alt="wax & polish">
-      </div>
-
-      <div class="block-services">
-        <img class="services-img" src="images/int7.jpg" alt="wax & polish">
-      </div>
-
-      <div class="block-services">
-        <img class="services-img" src="images/ext2.jpg" alt="wax & polish">
-      </div>
-
-      <div class="block-services">
-        <img class="services-img" src="images/ext2.jpg" alt="wax & polish">
-      </div>
-
-
-
-
-      <!-- <div class="block-img">
-        <a href="wax.html">
-          <img class="image-link" src="images/ext4.jpg" alt="wax & polish">
-          <h3>Wax & Polish</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div> -->
-
-
-
-    </div>
+    <p> We provide following Exterior services: </p>
 
     <div class="container-services">
-      <a class="button-nav" href="checkout.html">Add to Cart</a>
+      <div class="block">
+        <div class="block-img">
+          <a href="wax.html">
+            <img class="image-link" src="images/ext4.jpg" alt="wax & polish">
+            <h3>Wax & Polish - $200</h3>
+            <div class="overlay">
+              <div class="text-overlay">Find out more</div>
+            </div>
+          </a>
+        </div>
+        <a class="button-nav" href="checkout.html">Add to Cart</a>
+      </div>
+
+      <div class="block">
+        <div class="block-img">
+          <a href="wax.html">
+            <img class="image-link" src="images/tire2.jpg" alt="wheel & tire">
+            <h3>Wheel & tire restoration - $50</h3>
+            <div class="overlay">
+              <div class="text-overlay">Find out more</div>
+            </div>
+          </a>
+        </div>
+        <a class="button-nav" href="checkout.html">Add to Cart</a>
+      </div>
+
+      <div class="block">
+        <div class="block-img">
+          <a href="wax.html">
+            <img class="image-link" src="images/engine2.jpg" alt="engine cleanse">
+            <h3>Engine cleanse - $20</h3>
+            <div class="overlay">
+              <div class="text-overlay">Find out more</div>
+            </div>
+          </a>
+        </div>
+        <a class="button-nav" href="checkout.html">Add to Cart</a>
+      </div>
+
+  </section>
+
+  <section>
+    <h2> Interior Detail Services </h2>
+    <p> We offer the following Interior services: </p>
+
+    <div class="container-services">
+      <div class="block">
+        <div class="block-img">
+          <a href="vacuum.html">
+            <img class="image-link" src="images/int4.png" alt="trim cleanse">
+            <h3>Trim cleanse - $20</h3>
+            <div class="overlay">
+              <div class="text-overlay">Find out more</div>
+            </div>
+          </a>
+        </div>
+          <a class="button-nav" href="checkout.html">Add to Cart</a>
+      </div>
+
+      <div class="block">
+        <div class="block-img">
+          <a href="vacuum.html">
+            <img class="image-link" src="images/int3.jpeg" alt="wipe down">
+            <h3>Wipe down - $10</h3>
+            <div class="overlay">
+              <div class="text-overlay">Find out more</div>
+            </div>
+          </a>
+        </div>
+          <a class="button-nav" href="checkout.html">Add to Cart</a>
+      </div>
+
+      <div class="block">
+        <div class="block-img">
+          <a href="vacuum.html">
+            <img class="image-link" src="images/interior.jpg" alt="vaccuum & shampoo">
+            <h3>Vaccuum & shampoo - $100</h3>
+            <div class="overlay">
+              <div class="text-overlay">Find out more</div>
+            </div>
+          </a>
+        </div>
+          <a class="button-nav" href="checkout.html">Add to Cart</a>
+      </div>
     </div>
 
   </section>
+
 </body>
