--- a/vacuum.html
+++ b/vacuum.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title> Vacuum & Shampoo </title>
+  <title> Vaccuum & Shampoo </title>
   <link href="css/main.css" rel="stylesheet">
   <link href="css/queries.css" rel="stylesheet">
 
@@ -42,16 +42,35 @@
           <img src="images/ext.jpg" alt="detailing header">
         </div>
         <div class="header-text">
-          <h1>Vacuum & Shampoo</h1>
+          <h1>Vaccuum & Shampoo</h1>
           <p> Included with every Interior Detail service.</p>
         </div>
       </div>
     </div>
   </section>
 
+  <section class="container-about-us">
+    <div class="block-about-us">
+      <img src="images/int5.jpg" alt="vaccuum & shampoo wash seat">
+    </div>
+
+    <div class="block-about-us">
+      <h2> What is it?</h2>
+      <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get. The service includes:
+      </p>
+      <ul>
+        <li> Full vaccuum </li>
+        <li> Full shampoo </li>
+        <li> Stain removal </li>
+      </ul>
+      <a class="button-nav" href="checkout.html">Add to Cart</a>
+    </div>
+  </section>
+
   <section>
     <h2> What is it? </h2>
-    <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get. </p>
+    <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get.
+    </p>
 
     <h2> Our Finest Vacuum & Shampoo work in display </h2>
 
