Finished styling the detailed views
Made separate css code for the two detailed views so that I could make styling changes without messing up other pages.

--- a/vacuum.html
+++ b/vacuum.html
@@ -49,12 +49,12 @@
     </div>
   </section>
 
-  <section class="container-about-us">
+  <section class="container-detailed-view">
     <div class="block-about-us">
       <img src="images/int5.jpg" alt="vaccuum & shampoo wash seat">
     </div>
 
-    <div class="block-about-us ">
+    <div class="block-detailed-view">
       <h2> What is it?</h2>
       <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get. The service includes:
       </p>
