--- a/wax.html
+++ b/wax.html
@@ -49,12 +49,12 @@
     </div>
   </section>
 
-    <section class="container-about-us">
-      <div class="block-about-us">
+    <section class="container-detailed-view">
+      <div class="block-detailed-view">
         <img src="images/ext7.jpg" alt="before vs after wax and polish">
       </div>
 
-      <div class="block-about-us">
+      <div class="block-detailed-view">
         <h2> What is it?</h2>
         <p> Our Wax & Polish service will make your vehicle's paint look brand new again, no matter how worn out and scratched it is. Our highly-trained Detailers use only the best products available on the market. The service includes:
         </p>
