Edited Add-to-cart-buttons buttons and edited checkout
Added price to add-to-cart buttons and changed the items in the cart

--- a/checkout.html
+++ b/checkout.html
@@ -53,10 +53,10 @@
     <section class="container-payment">
       <div class="block-payment">
         <h3 class="larger-element"> Cart </h3>
-        <p> <a class="link" href="services.html"> Interior Detail </a> <span class="price">$150</span></p>
-        <p> <a class="link" href="services.html"> Exterior Detail </a> <span class="price">$100</span></p>
+        <p> <a class="link" href="services.html"> Wax & Polish </a> <span class="price">$200</span></p>
+        <p> <a class="link" href="services.html"> Wipe Down</a> <span class="price">$100</span></p>
         <div class="divider">
-          <p> Total <span class="price">$250</span> </p>
+          <p> Total <span class="price">$210</span> </p>
         </div>
 
         <h3 class="larger-element"> Vehicle type: </h3>
