--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
             </div>
           </a>
         </div>
-        <a class="button-nav" href="checkout.html">Add to Cart</a>
+        <a class="button-nav" href="checkout.html">Add to Cart - $200</a>
       </div>
 
       <div class="block">
@@ -78,7 +78,7 @@
             </div>
           </a>
         </div>
-        <a class="button-nav" href="checkout.html">Add to Cart</a>
+        <a class="button-nav" href="checkout.html">Add to Cart - $50</a>
       </div>
 
       <div class="block">
@@ -91,7 +91,7 @@
             </div>
           </a>
         </div>
-        <a class="button-nav" href="checkout.html">Add to Cart</a>
+        <a class="button-nav" href="checkout.html">Add to Cart - $20</a>
       </div>
 
   </section>
@@ -111,7 +111,7 @@
             </div>
           </a>
         </div>
-          <a class="button-nav" href="checkout.html">Add to Cart</a>
+          <a class="button-nav" href="checkout.html">Add to Cart - $20</a>
       </div>
 
       <div class="block">
@@ -124,7 +124,7 @@
             </div>
           </a>
         </div>
-          <a class="button-nav" href="checkout.html">Add to Cart</a>
+          <a class="button-nav" href="checkout.html">Add to Cart - $10</a>
       </div>
 
       <div class="block">
@@ -137,7 +137,7 @@
             </div>
           </a>
         </div>
-          <a class="button-nav" href="checkout.html">Add to Cart</a>
+          <a class="button-nav" href="checkout.html">Add to Cart - $100</a>
       </div>
     </div>
 
