--- a/wax.html
+++ b/wax.html
@@ -63,7 +63,7 @@
           <li> Full paint cut & polish</li>
           <li> Full body wax </li>
         </ul>
-        <a class="button-nav" href="checkout.html">Add to Cart</a>
+        <a class="button-nav" href="checkout.html">Add to Cart - $200</a>
         <a class="button-nav" href="services.html">Back to Services</a>
       </div>
 
