Made the checkout elements fill up more of the page
Made the input boxes stretch wider

--- a/checkout.html
+++ b/checkout.html
@@ -31,9 +31,7 @@
         </ul>
 	</div>
       </div>
-      <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a> -->
+
     </nav>
 
     <section>
@@ -59,7 +57,7 @@
           <p> Total <span class="price">$210</span> </p>
         </div>
 
-        <h3 class="larger-element"> Vehicle type: </h3>
+        <!-- <h3 class="larger-element"> Vehicle type: </h3>
         <form method="get" action="#">
           <input type="radio" id="car" name="type" value="car">
           <label for="car">coupe/sedan</label><br>
@@ -67,7 +65,7 @@
           <label for="SUV">SUV</label><br>
           <input type="radio" id="truck" name="type" value="truck">
           <label for="truck">truck</label><br>
-        </form>
+        </form> -->
       </div>
 
       <div class="block-payment">
@@ -92,9 +90,9 @@
           <label class="input-text-label"  for="ccname"> Name on card  </label>
           <input class="input-text" type="text" id = "ccname" name="ccname">
           <label class="input-text-label" for="ccnumber"> Credit card number </label>
-          <div class="stretch">
-            <input class="input-text" type="text" id = "ccnumber" name="ccnumber">
-          </div>
+          <!-- <div class="stretch"> -->
+          <input class="input-text" type="text" id = "ccnumber" name="ccnumber">
+          <!-- </div> -->
           <label class="input-text-label"  for="expMonth"> Expiry month </label>
           <input class="input-text" type="text" id = "expMonth" name="expMonth">
           <label class="input-text-label"  for="expYear"> Expiry year </label>
