Renamed css classes for contact-us
Renamed input-text-about-us to input-text-contact-us and changed the html accordingly

--- a/contact.html
+++ b/contact.html
@@ -68,15 +68,15 @@
         <p>Please fill out your full name, email and any question/comments </p>
         <form method="post" action="#">
           <label class="input-text-label" for="name"> Name </label>
-          <input class="input-text-about-us" type="text" id="name" name="name">
+          <input class="input-text-contact-us" type="text" id="name" name="name">
         </form>
         <form method="post" action="#">
           <label class="input-text-label" for="email"> Email </label>
-          <input class="input-text-about-us" type="text" id="email" name="email">
+          <input class="input-text-contact-us" type="text" id="email" name="email">
         </form>
         <form method="post" action="#">
           <label class="input-text-label" for="Message"> Message </label>
-          <input class="input-text-about-us" type="text" id="Message" name="message">
+          <input class="input-text-contact-us" type="text" id="Message" name="message">
         </form>
         <div class="container-payment">
           <input class="button-form" type="submit" value="Submit">
