--- a/home.html
+++ b/home.html
@@ -16,10 +16,12 @@
     <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav_centered -->
     <div class="topnav">
       <div class="topnav-left">
-        <span class="auto-detailing-font-top"> AUTO
-          <span class="mobile-font-top"> MOBILE </span>
-          <span> DETAILING </span>
-        </span>
+        <a href="home.html">
+          <span class="auto-detailing-font-top"> AUTO
+            <span class="mobile-font-top"> MOBILE </span>
+            <span> DETAILING </span>
+          </span>
+        </a>
       </div>
       <div class="navbar-buttons">
       <ul>
@@ -101,17 +103,6 @@
           <li> have a vehicle that is beat up from constant family use </li>
         </ul>
       </div>
-    </div>
-
-    <div class="parent">
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
     </div>
   </section>
 
