--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,21 @@
     <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav_centered -->
     <div class="topnav">
       <div class="topnav-left">
-        <span class="auto-detailing-font-top"> AUTO
-          <span class="mobile-font-top"> MOBILE </span>
-          <span class="detailing-font-top"> DETAILING </span>
-        </span>
+        <a href="home.html">
+          <span class="auto-detailing-font-top"> AUTO
+            <span class="mobile-font-top"> MOBILE </span>
+            <span class="detailing-font-top"> DETAILING </span>
+          </span>
+        </a>
       </div>
       <div class="navbar-buttons">
-      <ul>
-        <li><a class="button-nav" href="home.html">Home</a> </li>
-        <li><a class="button-nav" href="services.html">Services</a> </li>
-        <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
-        <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
-        <li><a class="button-nav" href="index.html">Style Guide</a> </li>
-      </ul>
+        <ul>
+          <li><a class="button-nav" href="home.html">Home</a> </li>
+          <li><a class="button-nav" href="services.html">Services</a> </li>
+          <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
+          <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
+          <li><a class="button-nav" href="index.html">Style Guide</a> </li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -42,45 +44,45 @@
         </div>
         <div class="header-text">
           <h1>Contact Us</h1>
-          <p>Have any questions or comments? </p>
+          <p>Drop us a message below. </p>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
-    <div class="container-contact-us">
-      <div class="block-contact-us">
-        <h2>Drop us a message below</h2>
-        <h3> Question / comment is regarding: </h3>
-        <form method="get" action="#">
-          <input type="radio" id="ext-detail" name="type" value="ext-detail">
-          <label for="ext-detail">Exterior Detail</label><br>
-          <input type="radio" id="int-detail" name="type" value="int-detail">
-          <label for="int-detail">Interior Detail</label><br>
-          <input type="radio" id="comp-updates" name="type" value="comp-updates">
-          <label for="comp-updates">Company updates</label><br>
-          <input type="radio" id="other" name="type" value="other">
-          <label for="other">Other</label><br>
-        </form>
+  <section class="container-contact-us">
+    <div class="block-contact-us">
+      <h2>Drop us a message</h2>
+      <h3> Question / comment is regarding: </h3>
+      <form method="get" action="#">
+        <input type="radio" id="ext-detail" name="type" value="ext-detail">
+        <label for="ext-detail">Exterior Detail</label><br>
+        <input type="radio" id="int-detail" name="type" value="int-detail">
+        <label for="int-detail">Interior Detail</label><br>
+        <input type="radio" id="comp-updates" name="type" value="comp-updates">
+        <label for="comp-updates">Company updates</label><br>
+        <input type="radio" id="other" name="type" value="other">
+        <label for="other">Other</label><br>
+      </form>
+    </div>
 
-        <h3> Your details: </h3>
-        <p>Please fill out your full name, email and any question/comments </p>
-        <form method="post" action="#">
-          <label class="input-text-label" for="name"> Name </label>
-          <input class="input-text-contact-us" type="text" id="name" name="name">
-        </form>
-        <form method="post" action="#">
-          <label class="input-text-label" for="email"> Email </label>
-          <input class="input-text-contact-us" type="text" id="email" name="email">
-        </form>
-        <form method="post" action="#">
-          <label class="input-text-label" for="Message"> Message </label>
-          <input class="input-text-contact-us" type="text" id="Message" name="message">
-        </form>
-        <div class="container-payment">
-          <input class="button-form" type="submit" value="Submit">
-        </div>
+    <div class="block-contact-us">
+      <h3> Your details: </h3>
+      <p>Please fill out your full name, email and any question/comments </p>
+      <form method="post" action="#">
+        <label class="input-text-label" for="name"> Name </label>
+        <input class="input-text-contact-us" type="text" id="name" name="name">
+      </form>
+      <form method="post" action="#">
+        <label class="input-text-label" for="email"> Email </label>
+        <input class="input-text-contact-us" type="text" id="email" name="email">
+      </form>
+      <form method="post" action="#">
+        <label class="input-text-label" for="Message"> Message </label>
+        <input class="input-text-contact-us" type="text" id="Message" name="message">
+      </form>
+      <div class="container-payment">
+        <input class="button-form" type="submit" value="Submit">
       </div>
     </div>
   </section>
