--- a/services.html
+++ b/services.html
@@ -17,10 +17,12 @@
     <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav_centered -->
     <div class="topnav">
       <div class="topnav-left">
-        <span class="auto-detailing-font-top"> AUTO
-          <span class="mobile-font-top"> MOBILE </span>
-          <span class="detailing-font-top"> DETAILING </span>
-        </span>
+        <a href="home.html">
+          <span class="auto-detailing-font-top"> AUTO
+            <span class="mobile-font-top"> MOBILE </span>
+            <span class="detailing-font-top"> DETAILING </span>
+          </span>
+        </a>
       </div>
       <div class="navbar-buttons">
       <ul>
